--- a/bookingsystem/resources/lang/no.json
+++ b/bookingsystem/resources/lang/no.json
@@ -11,6 +11,10 @@
     "Surname": "Etternavn",
     "Phone number": "Telefonnummer",
     "E-mail": "E-post",
+    "E-Mail Address": "E-post",
+    "Remember Me": "Husk meg",
+    "Login": "Logg inn",
+    "Forgot Your Password?": "Glemt passordet?",
     "Password": "Passord",
     "Confirm Password": "Bekreft passord",
     "Register": "Registrer",
